<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    <item
        android:id="@+id/action_change_view"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_change_view"/>

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_edit"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:enabled="false"
        android:title="@string/action_copy"/>

    <item
        android:id="@+id/action_paste"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:enabled="false"
        android:title="@string/action_paste"/>

    <item
        android:id="@+id/action_del"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:enabled="false"
        android:title="@string/action_del"/>

    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_cancel"/>

</menu>
