<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_change_view"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_change_view"/>


        <item
            android:id="@+id/action_sort"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/action_sort"
            >
            <menu>
            <item
                android:id="@+id/action_sort_by_filename"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_sort_by_filename"
                />

                <item
                    android:id="@+id/action_sort_by_date"
                    android:orderInCategory="100"
                    android:showAsAction="never"
                    android:title="@string/action_sort_by_date"
                    />
            </menu>
        </item>





    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_edit"/>


     <item
        android:id="@+id/action_control_pc"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_control_pc"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
